--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -439,6 +439,42 @@ p.numbers {
   }
 }
 
+// DASHBOARD //
+.dashboard {
+  .dashboard-header {
+    border-bottom: 1px solid #DADADA;
+    padding-bottom: 7px;
+    margin-bottom: 26px;
+    h2 {
+      font-weight: bold;
+      font-size: 14px;
+      margin: 0;
+      line-height: 17px;
+    }
+    span {
+      font-size: 14px;
+      line-height: 17px;
+      display: block;
+    }
+  }
+  .dashboard-row {
+    background-color: #fff;
+    margin-bottom: 13px;
+    border: 1px solid #EBEEF2;
+    box-sizing: border-box;
+    border-radius: 6px;
+    img {
+      margin-left: 23px;
+    }
+    span {
+      font-size: 18px;
+      line-height: 22px;
+      display: block;
+      padding: 19px 0 13px 0;
+    }
+  }
+}
+
 // FOOTER //
 
 footer {
