--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -454,12 +454,6 @@ p.numbers {
     border: 1px solid #EBEEF2;
     box-sizing: border-box;
     border-radius: 6px;
-    img {
-      margin-left: 23px;
-      @media (max-width: 479px) {
-        padding-top: 5px;
-      }
-    }
     span {
       font-size: 18px;
       line-height: 22px;
@@ -467,6 +461,21 @@ p.numbers {
       padding: 19px 0 13px 0;
       @media (max-width: 479px) {
         font-size: 16px;
+      }
+      &.sprite {
+        width: 72px;
+        height: 69px;
+        padding: 0;
+        margin-left: 23px;
+        @media (max-width: 479px) {
+          padding-top: 5px;
+        }
+      }
+    }
+    img {
+      margin-left: 23px;
+      @media (max-width: 479px) {
+        padding-top: 5px;
       }
     }
   }
