--- a/www.hlidacshopu.cz/src/stylesheets/media.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/media.scss
@@ -71,4 +71,20 @@
       margin-top: 15px;
     }
   }
+
+  .media-next-articles {
+    margin-top: 50px;
+    .mdc-layout-grid__inner{
+      text-align: center;
+    }
+    button {
+      color: #fff;
+      background-color: var(--purple);
+      border: none;
+      box-sizing: border-box;
+      border-radius: 6px;
+      padding: 15px 60px;
+      font-size: 16px;
+    }
+  }
 }
