--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -8,6 +8,8 @@
   --sub-info-grey: #979797;
   --sub-title: #515151;
   --purple: #545fef;
+  --light-purple: #F7F7FF;
+  --red: #CA0505;
 
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
@@ -780,7 +782,83 @@ footer {
   &__inner {
     background: #fff;
     border-radius: 18px;
+    box-shadow: 0 3px 30px rgba(0, 0, 0, 0.07);
     width: 100%;
     max-width: 620px;
+    position: relative;
+  }
+
+  &__close {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    border: 1px solid var(--purple);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    a {
+      font-weight: bold;
+      font-size: 1.6em;
+      text-decoration: none;
+    }
+  }
+}
+
+#hlidac-shopu-modal {
+  a {
+    color: var(--purple);
+  }
+  time {
+    font-weight: bold;
+    line-height: 2;
+  }
+  del {
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+
+    &::after {
+      content: "";
+      position: absolute;
+      border-bottom: 2px solid #000000;
+      transform: rotate(167.24deg);
+      bottom: 0;
+      left: 0;
+      height: calc(50% - 1px);
+      width: 100%;
+    }
+  }
+  .box {
+    text-align: center;
+    &.box--purple {
+      background: var(--light-purple);
+      border-radius: 6px;
+      padding: 16px;
+    }
+  }
+  .actual-price {
+    color: var(--red);
+    font-weight: bold;
+    font-size: 2em;
+    line-height: 1.6;
+  }
+  .claimed-price {
+    color: var(--grey);
+  }
+  .discount {
+    background: #FFE607;
+    border-radius: 50%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
   }
 }
