[www.hlidacshopu.cz] Images optimizations, layout improvements

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -202,13 +202,13 @@
 <footer>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="text-about mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+      <div class="text-about mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <img src="/images/logos/hlidacshopu_logo.svg" alt="Logo Hlídač Shopů" width="183">
         <p>Hlídač shopů je neziskový projekt, jehož cílem je chránit české
           spotřebitele před vynalézavostí marketingových oddělení velkých
           českých eshopů. <b class="text--purple"><a href="/proc-to-delame/">Více o&nbsp;nás…</a></b></p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <h3>NAVIGACE</h3>
         <ul>
           <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
@@ -216,16 +216,16 @@
           <li class="list_item"><a href="/media/">MÉDIA</a></li>
         </ul>
       </div>
-      <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        <a href="https://apify.com/"><img src="/images/logos/apify_logo.svg" alt="Logo Apify"></a>
+      <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+        <a href="https://apify.com/"><img src="/images/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
         <p class="sub-info--grey">Scrapujeme data i z omítek</p>
       </div>
-      <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        <a href="https://www.keboola.com/"><img src="/images/logos/keboola_logo.svg" alt="Logo Keboola"></a>
+      <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+        <a href="https://www.keboola.com/"><img src="/images/logos/keboola_logo.svg" alt="Logo Keboola" height="32"></a>
         <p class="sub-info--grey">DataOps &amp; Automation</p>
       </div>
-      <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        <a href="https://www.topmonks.cz/"><img src="/images/logos/topmonks_logo.svg" alt="Logo Hlídač Shopů"></a>
+      <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+        <a href="https://www.topmonks.cz/"><img src="/images/logos/topmonks_logo.svg" alt="Logo TopMonks" height="32"></a>
         <p class="sub-info--grey">Vyvíjíme software, stavíme startupty</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
