[www.hlidacshopu.cz] Images optimization

--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -539,6 +539,10 @@ p.numbers {
 footer {
   background: rgba(84, 95, 239, 0.07);
 
+  nav {
+    text-transform: uppercase;
+  }
+
   h3 {
     font-weight: normal;
     margin: 0.5em 0 1.1em;
