--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -281,12 +281,16 @@
           českých eshopů. <b class="text--purple"><a href="/proc-to-delame/">Více o&nbsp;nás…</a></b></p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-        <h3>NAVIGACE</h3>
-        <ul>
-          <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
-          <li class="list_item"><a href="/proc-to-delame/">PROČ TO DĚLÁME</a></li>
-          <li class="list_item"><a href="/media/">MÉDIA</a></li>
-        </ul>
+        <nav>
+          <h3>Navigace</h3>
+          <ul>
+            <li class="list_item"><a href="/">Ověřit vývoj ceny</a></li>
+            <li class="list_item"><a href="/proc-to-delame/">Proč to děláme</a></li>
+            <li class="list_item"><a href="/media/">Média</a></li>
+            <li class="list_item"><a href="https://www.lupa.cz/clanky/slevy-az-80-jak-e-shopy-kouzli-s-cenami-aneb-black-friday-po-cesku/">Black Friday analýza 2017</a></li>
+            <li class="list_item"><a href="https://www.lupa.cz/clanky/black-friday-po-cesku-kouzla-se-slevami-po-roce/">Black Friday analýza 2018</a></li>
+          </ul>
+        </nav>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
         <a href="https://apify.com/"><img src="/images/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
