[www.hlidacshopu.cz] Improved contrast of footer texts

--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -602,13 +602,14 @@ footer {
 
     a,
     span {
-      color: #8896a7;
+      color: var(--dark-grey);
       text-decoration: none;
     }
   }
 
   .logo-box {
     .sub-info--grey {
+      color: var(--dark-grey);
       height: 40px;
     }
   }
