[www.hlidacshopu.cz] Lighthouse issues fixes

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Hlídač shopů{% endblock %}</title>
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://www.googletagmanager.com" rel="preconnect">
+  <link href="https://www.google-analytics.com" rel="preconnect">
+  <link href="https://www.google.com" rel="preconnect">
+  <link href="https://stats.g.doubleclick.net" rel="preconnect">
+  <link href="https://ws8.hotjar.com" rel="preconnect">
+  <link href="https://in.hotjar.com" rel="preconnect">
+  <link href="https://script.hotjar.com" rel="preconnect">
+  <link href="https://static.hotjar.com" rel="preconnect">
+  <link href="https://vars.hotjar.com" rel="preconnect">
+  <link href="https://vc.hotjar.io" rel="preconnect">
   {% block preload %}{% endblock %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
@@ -10,6 +21,7 @@
   <meta name="description" content="Přes hlídač shopů nakoupíte za nejlepší cenu.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.hlidacshopu.cz/">
+  <meta property="og:image" content="https://www.hlidacshopu.cz/og-image.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/main.css">
   {% block styles %}{% endblock %}
@@ -62,7 +74,7 @@
         class="hs_logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
         <a class="logo" href="/" title="Go to homepage">
           <svg width="183" height="29" viewBox="0 0 183 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <title>[logo] Hlidac Shopu.cz</title>
+            <title>HlídačShopů.cz</title>
             <g clip-path="url(#logo)">
               <path d="M43.224 7.382V20H46.518V15.158H51.612V20H54.906V7.382H51.612V12.53H46.518V7.382H43.224Z"
                     fill="#263238"/>
@@ -207,38 +219,38 @@
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="text-about mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <svg width="183" height="29" viewBox="0 0 183 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <title>[logo] Hlidac Shopu.cz</title>
-          <g clip-path="url(#logo)">
+          <title>HlídačShopů.cz</title>
+          <g clip-path="url(#logo-footer)">
             <path d="M43.224 7.382V20H46.518V15.158H51.612V20H54.906V7.382H51.612V12.53H46.518V7.382H43.224Z"
-                  fill="#5C62CD"/>
-            <path d="M57.4468 6.644V20H60.6508V6.644H57.4468Z" fill="#5C62CD"/>
+                  fill="#263238"/>
+            <path d="M57.4468 6.644V20H60.6508V6.644H57.4468Z" fill="#263238"/>
             <path
               d="M65.1187 6.14L63.1927 9.236H65.6227L67.9807 7.148L65.1187 6.14ZM63.1927 10.262V20H66.3787V10.262H63.1927Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M75.4593 6.644V11.54C74.7753 10.658 73.7673 10.154 72.5073 10.154C69.8253 10.154 68.0433 12.116 68.0433 15.086C68.0433 18.11 69.8433 20.126 72.5793 20.126C73.8033 20.126 74.7933 19.64 75.4593 18.74V20H78.6633V6.644H75.4593ZM73.3713 17.606C72.1113 17.606 71.2653 16.616 71.2653 15.176C71.2653 13.736 72.1113 12.746 73.3713 12.746C74.6133 12.746 75.4593 13.718 75.4593 15.176C75.4593 16.616 74.6133 17.606 73.3713 17.606Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M85.5848 10.136C83.9828 10.136 82.5788 10.514 81.0488 11.198L81.9308 13.358C82.9748 12.854 84.0368 12.584 84.8468 12.584C86.0708 12.584 86.7007 13.124 86.7007 14.042V14.15H84.1628C81.7508 14.186 80.4367 15.248 80.4367 17.102C80.4367 18.884 81.6788 20.144 83.7668 20.144C85.0808 20.144 86.0707 19.712 86.7007 18.902V20H89.8507V13.664C89.8328 11.432 88.2668 10.136 85.5848 10.136ZM84.7567 17.966C83.9287 17.966 83.4427 17.534 83.4427 16.868C83.4427 16.184 83.8928 15.86 84.7928 15.86H86.7007V16.706C86.5027 17.444 85.7107 17.966 84.7567 17.966Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M92.3993 6.284L94.5953 9.272H97.3673L99.5633 6.284H97.0793L95.9813 7.922L94.8833 6.284H92.3993ZM98.2853 13.808L100.607 12.458C99.7613 11 98.2133 10.154 96.2513 10.154C93.2273 10.154 91.2113 12.152 91.2113 15.176C91.2113 18.146 93.2093 20.108 96.2153 20.108C98.2853 20.108 99.8693 19.262 100.643 17.768L98.2853 16.418C97.8893 17.174 97.2233 17.516 96.3773 17.516C95.2253 17.516 94.4333 16.58 94.4333 15.158C94.4333 13.754 95.2253 12.8 96.3773 12.8C97.2053 12.8 97.8533 13.178 98.2853 13.808Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M108.609 13.34L109.689 11.252C108.465 10.514 107.043 10.118 105.639 10.118C103.353 10.118 101.643 11.234 101.643 13.268C101.643 16.634 106.665 15.968 106.665 17.3C106.665 17.696 106.233 17.894 105.639 17.894C104.559 17.894 103.299 17.462 102.183 16.688L101.175 18.758C102.363 19.676 103.929 20.144 105.567 20.144C107.943 20.144 109.689 19.01 109.689 17.012C109.707 13.628 104.595 14.24 104.595 12.962C104.595 12.548 104.973 12.35 105.513 12.35C106.305 12.35 107.403 12.71 108.609 13.34Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M117.926 10.136C116.504 10.136 115.388 10.73 114.704 11.846V6.644H111.5V20H114.704V15.194C114.704 13.916 115.424 13.016 116.612 12.998C117.638 12.998 118.268 13.682 118.268 14.78V20H121.472V13.862C121.472 11.576 120.068 10.136 117.926 10.136Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M128.144 10.154C124.94 10.154 122.834 12.134 122.834 15.122C122.834 18.128 124.94 20.108 128.144 20.108C131.348 20.108 133.472 18.128 133.472 15.122C133.472 12.134 131.348 10.154 128.144 10.154ZM128.144 12.746C129.404 12.746 130.25 13.718 130.25 15.176C130.25 16.616 129.404 17.588 128.144 17.588C126.902 17.588 126.056 16.616 126.056 15.176C126.056 13.718 126.902 12.746 128.144 12.746Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M141.261 10.154C140.055 10.154 139.083 10.64 138.399 11.522V10.262H135.195V23.492H138.399V18.74C139.083 19.622 140.091 20.108 141.333 20.108C144.033 20.108 145.797 18.146 145.797 15.176C145.797 12.152 143.979 10.154 141.261 10.154ZM140.469 17.516C139.245 17.516 138.399 16.544 138.399 15.104C138.399 13.664 139.245 12.674 140.469 12.674C141.729 12.674 142.575 13.664 142.575 15.104C142.575 16.544 141.729 17.516 140.469 17.516Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M152.107 9.65C153.313 9.65 154.285 8.678 154.285 7.49C154.285 6.284 153.313 5.312 152.107 5.312C150.901 5.312 149.929 6.284 149.929 7.49C149.929 8.678 150.901 9.65 152.107 9.65ZM152.107 6.59C152.611 6.59 153.025 6.986 153.025 7.49C153.025 7.976 152.611 8.372 152.107 8.372C151.603 8.372 151.189 7.976 151.189 7.49C151.189 6.986 151.603 6.59 152.107 6.59ZM153.745 10.262V15.068C153.745 16.346 153.061 17.246 151.927 17.264C150.973 17.264 150.361 16.598 150.361 15.5V10.262H147.157V16.418C147.157 18.686 148.525 20.144 150.631 20.144C152.017 20.126 153.079 19.55 153.745 18.416V20H156.949V10.262H153.745Z"
-              fill="#5C62CD"/>
+              fill="#263238"/>
             <path
               d="M160.37 17.03C159.47 17.03 158.84 17.66 158.84 18.578C158.84 19.496 159.47 20.144 160.37 20.144C161.27 20.144 161.918 19.496 161.918 18.578C161.918 17.66 161.27 17.03 160.37 17.03Z"
               fill="#5C62CD"/>
@@ -274,7 +286,7 @@
               fill="white"/>
           </g>
           <defs>
-            <clipPath id="logo">
+            <clipPath id="logo-footer">
               <rect width="183" height="29" fill="white" />
             </clipPath>
           </defs>
